2006-11-03  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/event/ComponentEvent/paramString.java: Changed
	tag documentation to JDK1.1.

2006-11-03  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/event/ComponentEvent/paramString.java: New test.

2006-11-01  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/ScrollPaneAdjustable/paramString.java: New test.

2006-11-01  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/GridBagLayout/toString.java: New test.

2006-11-01  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JTextField/fireActionPerformed.java: Added 
	a new test.

2006-10-31  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/javax/swing/JTextField/fireActionPerformed.java: New test.

2006-10-30  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/java/awt/dnd/DragGestureRecognizer/resetRecognizer.java:
	New test.

2006-10-30  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/java/awt/datatransfer/DataFlavor/readExternal.java,
	* gnu/testlet/java/awt/datatransfer/DataFlavor/writeExternal.java:
	New tests.

2006-10-28  Roman Kennke <kennke@aicas.com>

	* gnu/testlet/javax/swing/TransferHandler/importData.java:
	New test.

2006-10-25  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/Dialog/defaultProperties.java: New test.
	* gnu/testlet/java/awt/FileDialog/defaultProperties.java: New test.
	* gnu/testlet/java/awt/FileDialog/setFile.java: New test.

2006-10-24  Tania Bento  <tbento@redhat.com>

	* gnu/testlet/java/awt/Scrollbar/testSetValues: Added a new test.
	* gnu/testlet/java/awt/Scrollbar/testSetBlockIncrement: Added a 
	new test.
	* gnu/testlet/java/awt/Scrollbar/testSetUnitIncrement: Added a 
	new test.

2006-10-23  Raif S. Naffah  <classpath@naffah-raif.name>

	* gnu/testlet/gnu/javax/crypto/jce/TestOfCipherOutputStream.java: New test.

2006-10-21  Audrius Meskauskas  <Audrius.Meskauskas@spectraseis.com>
   
	* gnu/testlet/java/awt/image/BufferedImage/getSetRgb1Pixel.java:
	New test.
