@@ -1,3 +1,8 @@
+2006-11-03  Audrius Meskauskas  <Audrius.Meskauskas@spectraseis.com>
+   
+	* gnu/testlet/javax/swing/text/html/parser/ParserDelegator/
+	SimpleParsing.java: New test.
+
 2006-11-03  Tania Bento  <tbento@redhat.com>
 
 	* gnu/testlet/java/awt/event/ComponentEvent/paramString.java: Changed
